; ModuleID = '/home/carl/AnghaBench/Quake-III-Arena/code/game/extr_g_syscalls.c_trap_BotReplyChat.c'
source_filename = "/home/carl/AnghaBench/Quake-III-Arena/code/game/extr_g_syscalls.c_trap_BotReplyChat.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@BOTLIB_AI_REPLY_CHAT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @trap_BotReplyChat(i32 %0, i8* %1, i32 %2, i32 %3, i8* %4, i8* %5, i8* %6, i8* %7, i8* %8, i8* %9, i8* %10, i8* %11) #0 {
  %13 = alloca i32, align 4
  %14 = alloca i8*, align 8
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  %17 = alloca i8*, align 8
  %18 = alloca i8*, align 8
  %19 = alloca i8*, align 8
  %20 = alloca i8*, align 8
  %21 = alloca i8*, align 8
  %22 = alloca i8*, align 8
  %23 = alloca i8*, align 8
  %24 = alloca i8*, align 8
  store i32 %0, i32* %13, align 4
  store i8* %1, i8** %14, align 8
  store i32 %2, i32* %15, align 4
  store i32 %3, i32* %16, align 4
  store i8* %4, i8** %17, align 8
  store i8* %5, i8** %18, align 8
  store i8* %6, i8** %19, align 8
  store i8* %7, i8** %20, align 8
  store i8* %8, i8** %21, align 8
  store i8* %9, i8** %22, align 8
  store i8* %10, i8** %23, align 8
  store i8* %11, i8** %24, align 8
  %25 = load i32, i32* @BOTLIB_AI_REPLY_CHAT, align 4
  %26 = load i32, i32* %13, align 4
  %27 = load i8*, i8** %14, align 8
  %28 = load i32, i32* %15, align 4
  %29 = load i32, i32* %16, align 4
  %30 = load i8*, i8** %17, align 8
  %31 = load i8*, i8** %18, align 8
  %32 = load i8*, i8** %19, align 8
  %33 = load i8*, i8** %20, align 8
  %34 = load i8*, i8** %21, align 8
  %35 = load i8*, i8** %22, align 8
  %36 = load i8*, i8** %23, align 8
  %37 = load i8*, i8** %24, align 8
  %38 = call i32 @syscall(i32 %25, i32 %26, i8* %27, i32 %28, i32 %29, i8* %30, i8* %31, i8* %32, i8* %33, i8* %34, i8* %35, i8* %36, i8* %37)
  ret i32 %38
}

declare dso_local i32 @syscall(i32, i32, i8*, i32, i32, i8*, i8*, i8*, i8*, i8*, i8*, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
